# mlflow-docker-compose

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
db/: db.dockerfile
db/scripts/: create-database.sql  entrypoints.sh  run-initialization.sh
mlflow/: Dockerfile  base-ubuntu-python.dockerfile  mlflow-tracking-server.dockerfile  requirements.txt
mlproject-sample/: .gitignore  MLProject  main.py  predict.py  pyproject.toml  run-predict.sh  run.sh
