[tool.poetry]
name = "mlflow-docker-compose"
version = "0.1.0"
description = ""
authors = ["Hajar Razip <mshajarrazip@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_docker_compose"}]

[tool.poetry.dependencies]
python = "~3.10"
mlflow = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
