[tool.poetry]
name = "mlproject-sample"
version = "0.1.0"
description = ""
authors = ["Hajar Razip <mshajarrazip@gmail.com>"]
readme = "README.md"
packages = [{include = "mlproject_sample"}]

[tool.poetry.dependencies]
python = "~=3.10"
scikit-learn = "^1.3.0"
mlflow = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
